Completed survey app with sessions

--- a/Unit19_Flask/flask-survey/templates/home.html
+++ b/Unit19_Flask/flask-survey/templates/home.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>{{title}}</h1>
     <h2>{{instructions}}</h2>
-    <form action='/start'>
+    <form action='/session' method='POST'>
         <button>Begin</button>
     </form>
 {% endblock %}
