--- a/Unit23_SQLAlchemy/flask-blogly/templates/user_details.html
+++ b/Unit23_SQLAlchemy/flask-blogly/templates/user_details.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %} User Details {% endblock %}
 {% block content %}
-    <img src={{user.image_url}} alt="Profile Picture">
+    <img src={{user.image_url}} alt="Profile Picture" width="120px" height="'110px">
     <h2>{{user.first_name}}</h2>
     <h2>{{user.last_name}}</h2>
     <form action="/users/{{user.id}}/edit">
@@ -9,5 +9,13 @@
     </form> <br>
     <form action="/users/{{user.id}}/delete" method="Post">
         <button type="submit">Delete</button>
+    </form>
+    <ul>
+        {% for post in posts %}
+        <li><a href="/posts/{{post.id}}">{{post.title}}</a></li>
+        {% endfor %}
+    </ul>
+    <form action="/users/{{user.id}}/posts/new">
+        <button type="submit">Add Post</button>
     </form>
 {% endblock %}
