Finished third part of Blogly

--- a/Unit23_SQLAlchemy/flask-blogly/static/styles.css
+++ b/Unit23_SQLAlchemy/flask-blogly/static/styles.css
@@ -9,3 +9,14 @@ img {
 h2 {
 	display: inline-block;
 }
+
+.tag {
+	border: 1px solid;
+	display: inline;
+	border-radius: 5px;
+	padding: 2px;
+	background-color: blue;
+	color: white;
+	border-color: blue;
+	font-size: 12px;
+}
